@@ -325,7 +325,7 @@ namespace ATG
             SDKMESH_SUBSET Subset = {0};
             Subset.IndexStart = 0;
             Subset.IndexCount = static_cast<UINT64>( dwMaxIndexCount );
-			//z zbugfix 151216
+			//z zbugfix 151216 x2p1m
             Subset.MaterialID = INVALID_MATERIAL;
             Subset.VertexStart = 0;
             Subset.VertexCount = static_cast<UINT64>( dwMaxVertexCount );
@@ -707,7 +707,7 @@ namespace ATG
             {
                 StartKey = EndKey;
                 ++dwCurrentSrcKey;
-                //z zbugfix 15121
+                //z zbugfix 151215 LastFrame
 				if( dwCurrentSrcKey >= (dwKeyCount - 1) )
                     bEndKey = false;
                 else
@@ -757,7 +757,7 @@ namespace ATG
             {
                 StartKey = EndKey;
                 ++dwCurrentSrcKey;
-				//z zbugfix
+				//z zbugfix 151215 LastFrame
                 if( dwCurrentSrcKey >= (dwKeyCount - 1) )
                     bEndKey = false;
                 else
@@ -807,7 +807,7 @@ namespace ATG
             {
                 StartKey = EndKey;
                 ++dwCurrentSrcKey;
-				//z zbugfix
+				//z zbugfix 151215 LastFrame
                 if( dwCurrentSrcKey >= (dwKeyCount - 1) )
                     bEndKey = false;
                 else
